force-apps/ETOrchestrateDC_DemoPKG/afterRuleset/objects/UnifiedIndividual__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BirthDate__c</fullName>
        <label>Birth Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <labelOverride>Birth Date</labelOverride>
            <masterLabel>Birth Date</masterLabel>
            <refAttrDeveloperName>BirthDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <labelOverride>Created Date</labelOverride>
            <masterLabel>Created Date</masterLabel>
            <refAttrDeveloperName>CreatedDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FirstName__c</fullName>
        <label>First Name</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <labelOverride>First Name</labelOverride>
            <masterLabel>First Name</masterLabel>
            <refAttrDeveloperName>FirstName</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Unified Individual Id</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <labelOverride>Unified Individual Id</labelOverride>
            <masterLabel>Unified Individual Id</masterLabel>
            <primaryIndexOrder>1</primaryIndexOrder>
            <refAttrDeveloperName>Id</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <labelOverride>Last Modified Date</labelOverride>
            <masterLabel>Last Modified Date</masterLabel>
            <refAttrDeveloperName>LastModifiedDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastName__c</fullName>
        <label>Last Name</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <labelOverride>Last Name</labelOverride>
            <masterLabel>Last Name</masterLabel>
            <refAttrDeveloperName>LastName</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PersonName__c</fullName>
        <label>Person Name</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <labelOverride>Person Name</labelOverride>
            <masterLabel>Person Name</masterLabel>
            <refAttrDeveloperName>PersonName</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PhotoURL__c</fullName>
        <label>Photo URL</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <labelOverride>Photo URL</labelOverride>
            <masterLabel>Photo URL</masterLabel>
            <refAttrDeveloperName>PhotoURL</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Salutation__c</fullName>
        <label>Salutation</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <labelOverride>Salutation</labelOverride>
            <masterLabel>Salutation</masterLabel>
            <refAttrDeveloperName>Salutation</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Derived</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>true</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>Unified Individual</labelOverride>
        <masterLabel>Unified Individual</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
        <referenceEntityName>UnifiedIndividual</referenceEntityName>
    </mktDataModelAttributes>
</CustomObject>